More and more cleanup

--- a/src/scss/core/_layout.scss
+++ b/src/scss/core/_layout.scss
@@ -1,7 +1,4 @@
-// app-dashboard and app-root are Angular2+ selectors. You can add here your own selectors if you need.
-.app,
-app-dashboard,
-app-root {
+.app {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -354,10 +351,6 @@ app-root {
   .main, .app-footer {
     margin-left: 0 !important;
   }
-
-  // .aside-menu {
-  //   margin-right: - $aside-menu-width;
-  // }
 
   .sidebar-hidden {
     .sidebar {
