--- a/src/scss/_bootstrap-variables.scss
+++ b/src/scss/_bootstrap-variables.scss
@@ -1,9 +1,5 @@
 // Bootstrap overrides
 
-//
-// Color system
-//
-
 $white:                           #fff;
 $gray-100:                        #f0f3f5;
 $gray-200:                        #c2cfd6;
@@ -26,22 +22,6 @@ $yellow:                          #ffc107 !default;
 $green:                           #4dbd74;
 $teal:                            #20c997 !default;
 $cyan:                            #63c2de;
-
-$colors: (
-  blue:                           $blue,
-  indigo:                         $indigo,
-  purple:                         $purple,
-  pink:                           $pink,
-  red:                            $red,
-  orange:                         $orange,
-  yellow:                         $yellow,
-  green:                          $green,
-  teal:                           $teal,
-  cyan:                           $cyan,
-  white:                          $white,
-  gray:                           $gray-600,
-  gray-dark:                      $gray-800
-);
 
 $theme-colors: (
   primary:                        $blue,
@@ -75,50 +55,6 @@ $theme-colors: (
   gray-900:                       $gray-900
 );
 
-
-// Body
-//
-// Settings for the `<body>` element.
-
 $body-bg:                         #e4e5e6;
-
-// Typography
-//
-// Font, line-height, and color for body text, headings, and more.
-
 $font-size-base:                  0.875rem;
-
-// Breadcrumbs
-
-$breadcrumb-bg:                   #fff;
-$breadcrumb-margin-bottom:        1.5rem;
-
-// Cards
-
-$card-border-color:               $gray-200;
-$card-cap-bg:                     $gray-100;
-
-// Dropdowns
-
-$dropdown-padding-y:              0;
-$dropdown-border-color:           $gray-200;
-$dropdown-divider-bg:             $gray-100;
-
-// Buttons
-
-$btn-secondary-border:            $gray-300;
-
-// Progress bars
-
-$progress-bg:                     $gray-100;
-
-// Tables
-
-$table-bg-accent:                 $gray-100;
-$table-bg-hover:                  $gray-100;
-
-// Forms
-
-$input-group-addon-bg:            $gray-100;
-$input-border-color:              $gray-200;
-$input-group-addon-border-color:  $gray-200;
+$breadcrumb-bg:                   $gray-100;
